--- a/src/app/styles/components/auth/_signin.scss
+++ b/src/app/styles/components/auth/_signin.scss
@@ -1,20 +1,144 @@
-.signin_main{
-    background-color: #000;
-    color:#fff;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
+body,
+input {
+    font-family: "Poppins", sans-serif;
+}
 
-.signin_section {
-    
-    &_1 {
+form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0rem 5rem;
+    transition: all 0.2s 0.7s;
+    overflow: hidden;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
 
+.signin_section_main_contenedor{
+
+    position: relative;
+    width: 100%;
+    background-image: url("https://i.pinimg.com/originals/97/57/93/975793fff4eb682dcc396c2885a13f2f.jpg");
+    min-height: 100vh;
+    overflow: hidden;
+  
+}
+
+.signin_section_main_contenedor:before {
+    content: "";
+    position: absolute;
+    height: 2000px;
+    width: 1500px;
+    top: -10%;
+    right: 55%;
+    transform: translateY(-50%);
+    background-image: linear-gradient(-45deg, #4481eba6 0%, #04befe 100%);
+    transition: 1.8s ease-in-out;
+    border-radius: 50%;
+    z-index: 6;
+}
+
+.signin_section_container {
+    &_forms-container {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        &_signin-signup {
+            position: absolute;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            left: 75%;
+            width: 50%;
+            transition: 1s 0.7s ease-in-out;
+            display: grid;
+            grid-template-columns: 1fr;
+            z-index: 5;
+        }
     }
+}
 
-    &_2 {
-        
-    }
+.section_signin_form {
+    z-index: 2;
+    background-color: #fff;
+    border-radius: 10%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 80%;
 
     &_title {
+        font-size: 2.2rem;
+        color: #444;
+        margin-bottom: 10px;
+    }
 
+    .btn {
+        width: 60%;
+        background-color: #5995fd;
+        border: none;
+        outline: none;
+        height: 49px;
+        border-radius: 49px;
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: 600;
+        margin: 10px 0;
+        cursor: pointer;
+        transition: 0.5s;
+    }
+
+    .btn:hover {
+        background-color: #4d84e2;
+    }
+
+    &_social-media {
+        display: flex;
+        justify-content: center;
+    }
+
+    &_input-field {
+        max-width: 380px;
+        width: 100%;
+        background-color: #f0f0f0;
+        margin: 10px 0;
+        height: 55px;
+        border-radius: 55px;
+        display: grid;
+        grid-template-columns: 15% 85%;
+        padding: 0 0.4rem;
+        position: relative;
+        align-items: center;
+
+        span {
+            padding-left: 15px;
+            transition: 0.5s;
+        }
+
+        input {
+            background: none;
+            outline: none;
+            border: none;
+            line-height: 1;
+            font-weight: 600;
+            font-size: 1.1rem;
+            color: #333;
+        }
+
+        input::placeholder {
+            color: #aaa;
+            font-weight: 500;
+        }
     }
 }
+
+/* Animacion */
