--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,5 +1,3 @@
 @import './base/index.scss';
-// @import './components/index.scss';
-@import './components/ui/index.scss';
-
-
+@import './components/index.scss';
+@import './components/root/convocatoria';
