se agrego el listado de convocatorias activas

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,3 +1,4 @@
 @import './base/index.scss';
 @import './components/index.scss';
 @import './components/root/convocatoria';
+@import './components/root/card';
