senviar email convocatoria completado

--- a/src/app/styles/base/_base.scss
+++ b/src/app/styles/base/_base.scss
@@ -13,3 +13,16 @@ html, body {
 main {
     width: 100%;
 }
+
+
+
+input[type="time"] {
+    cursor: pointer;
+    &::-webkit-calendar-picker-indicator {
+        background: none;
+    }
+}
+
+.tox-dialog {
+    z-index: 100;
+}
