--- a/src/app/styles/components/ui/_scroll.scss
+++ b/src/app/styles/components/ui/_scroll.scss
@@ -1,4 +1,4 @@
-body {
+body,.modal {
     &::-webkit-scrollbar {
         width: 6px;     /* Tamaño del scroll en vertical */
         height: 6px;    /* Tamaño del scroll en horizontal */
