--- a/src/app/styles/components/auth/_signin.scss
+++ b/src/app/styles/components/auth/_signin.scss
@@ -133,6 +133,8 @@ form {
             font-weight: 600;
             font-size: 16px;
             color: #333;
+            border: none !important;
+            margin: 0 !important;
         }
 
         input::placeholder {
