--- a/src/app/styles/components/root/_convocatoria.scss
+++ b/src/app/styles/components/root/_convocatoria.scss
@@ -25,6 +25,14 @@
     }
 }
 
+.section_header{
+  
+   margin-top: 15px;
+   .second{
+       text-align: right;
+   }
+    
+}
 
 .modal {
     padding: 3em;
