--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,6 +3,7 @@
 @import './components/root/convocatoria';
 @import './components/root/card';
 @import './components/root/list';
+@import './components/root/actas';
 
 html, body{
     height: 100%;
